--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
     "bcrypt (==4.0.1)",
     "python-jose (>=3.4.0,<4.0.0)",
     "python-multipart (>=0.0.20,<0.0.21)",
-    "passlib (>=1.7.4,<2.0.0)"
+    "passlib (>=1.7.4,<2.0.0)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "greenlet (>=3.2.2,<4.0.0)"
 ]
 
 
