--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,8 @@ dependencies = [
     "python-multipart (>=0.0.20,<0.0.21)",
     "passlib (>=1.7.4,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
-    "greenlet (>=3.2.2,<4.0.0)"
+    "greenlet (>=3.2.2,<4.0.0)",
+    "email-validator (>=2.2.0,<3.0.0)"
 ]
 
 
