--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,11 @@ dependencies = [
     "passlib (>=1.7.4,<2.0.0)",
     "asyncpg (>=0.30.0,<0.31.0)",
     "greenlet (>=3.2.2,<4.0.0)",
-    "email-validator (>=2.2.0,<3.0.0)"
+    "email-validator (>=2.2.0,<3.0.0)",
+    "pytest (>=8.3.5,<9.0.0)",
+    "pytest-asyncio (>=1.0.0,<2.0.0)",
+    "pytest-mock (>=3.14.1,<4.0.0)",
+    "python-ulid (>=3.0.0,<4.0.0)",
 ]
 
 
